# rithmic

./: .gitattributes  .gitignore  Cargo.toml  README.md
rithmic/: Cargo.toml
rithmic-impl/: Cargo.toml
rithmic-impl/src/: cmp_by_key.rs  cmp_from_ord.rs  lib.rs  struct_input.rs  transparency.rs
rithmic-impl/src/autofill/: autofill.rs  memoize.rs  mod.rs
rithmic-impl/tests/: autofill.rs  cmp_by_key.rs  cmp_from_ord.rs  memoize.rs  struct_input.rs  transparency.rs
rithmic/benches/: bvec.rs  ndvec.rs
rithmic/examples/: abc160-f.rs  abc163-f.rs  abc192-f.rs  abc248-g.rs  arc065-e.rs  run-all.py
rithmic/examples/abc192-f/in/: hand_01.txt  hand_02.txt  random_03.txt  random_04.txt  random_10.txt  random_11.txt  random_13.txt  random_17.txt  special_02.txt  special_03.txt  special_05.txt  special_06.txt  special_07.txt  special_09.txt
rithmic/examples/abc248-g/in/: hand_00.txt  hand_01.txt  hand_02.txt  hand_04.txt  hand_06.txt  hand_07.txt  hand_08.txt  hand_09.txt  hand_12.txt  hand_13.txt  random_00.txt  random_01.txt  random_05.txt  random_08.txt  random_12.txt  random_13.txt  random_16.txt  random_19.txt  random_20.txt
rithmic/examples/arc065-e/in/: subtask1_0.txt  subtask1_14.txt  subtask1_15.txt  subtask1_16.txt  subtask1_17.txt  subtask1_18.txt  subtask1_2.txt  subtask1_21.txt  subtask1_23.txt  subtask1_3.txt  subtask1_5.txt  subtask1_7.txt  subtask1_8.txt
rithmic/examples/helper/: mod.rs
rithmic/src/: aho_corasick.rs  debug_or.rs  disjoint_intervals.rs  fenwick.rs  geometry.rs  index_compress.rs  insort.rs  inversions.rs  ipc.rs  lib.rs  longest_transitive_subseq.rs  meld_heap.rs  mo_algorithm.rs  mod_factorial_table.rs  odometer.rs  option_merge.rs  ord_pair.rs  print_methods.rs  rangelike.rs  sieve_divisors.rs  slice_get_sub.rs  slice_pair_mut.rs  sparse_table.rs  ternary_search.rs  unwrap_any.rs  waterline.rs  xor_basis.rs
rithmic/src/aug_treap/: finger.rs  mod.rs
rithmic/src/aug_treap/convex_hull_trick/: int_float_or_ratio.rs  mod.rs  tests.rs
rithmic/src/aug_treap/order_treap/: list.rs  mod.rs  sorted_list.rs  tests.rs
rithmic/src/binary_search/: binary_search.rs  mod.rs  par_binary_search.rs  tests.rs
rithmic/src/binary_search/int_or_float/: mod.rs  tests.rs
rithmic/src/bvec/: mod.rs  tests.rs
rithmic/src/gameboard/: mod.rs  tests.rs
rithmic/src/graph/: bfs.rs  dfs.rs  dijkstra.rs  floyd_warshall.rs  graph.rs  heavy_light.rs  lca.rs  mod.rs  mst.rs  path_from_pred.rs  rooted_subtree_fn.rs  tarjan_scc.rs  tree.rs  tsp.rs
rithmic/src/graph/pathing/: bfs.rs  dijkstra.rs  dijkstra_01.rs  distpred.rs  mod.rs
rithmic/src/imin_imax/: generate.py  imax.rs  imin.rs  mod.rs  tests.rs
rithmic/src/int_bitops/: mod.rs  tests.rs
rithmic/src/monoid_ds/: mod.rs  monoid_ops.rs  segtree.rs
rithmic/src/monoid_ds/fenwick/: mod.rs  tests.rs
rithmic/src/ndvec/: matrix.rs  matrix_mul.rs  mod.rs  tests.rs
rithmic/src/polynomial/: mod.rs  tests.rs
rithmic/src/prefix_sums/: mod.rs  tests.rs
rithmic/src/triangular_n/: mod.rs  tests.rs
rithmic/src/union_find/: mod.rs
rithmic/tests/: _template-atcoder.rs  _template-usaco.rs  abc160-f.rs  abc163-f.rs  abc192-f.rs  abc218-f.rs  abc246-e.rs  abc248-g.rs  abc294-g.rs  abc296-g.rs  arc061-e.rs  arc065-e.rs  arc136-d.rs  censor_gold.rs  fencing_gold.rs  grass_gold.rs  meeting_silver.rs  stampede_silver.rs  superbull_silver.rs
rithmic/tests/abc192-f/in/: random_05.txt  random_07.txt  random_09.txt  random_12.txt  random_15.txt  special_01.txt  special_04.txt  special_08.txt  special_10.txt
rithmic/tests/helper/: mod.rs
(+51 files in other folders)
