# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rithmic-impl"
version = "1.0.0-pre"
edition = "2021"
rust-version = "1.65"
authors = ["Barry Fam <contact@barryfam.io>"]
license = "MIT"
description = "Odds & ends: Algorithms, data structures, ease-of-use"
categories = ["algorithms", "data-structures", "rust-patterns"]
# keywords =
# readme =
# documentation =
# homepage =
# repository =

[lib]
proc-macro = true

[features]
unsafe = []

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["full", "extra-traits"] }



[dev-dependencies]
rithmic = { path = "../rithmic" }

ahash = "0.8.0"
proconio = "0.4.3"
