# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rithmic"
version = "1.0.0-pre"
edition = "2021"
rust-version = "1.63"
authors = ["Barry Fam <contact@barryfam.io>"]
license = "MIT"
description = "Odds & ends: Algorithms, data structures, helpers"
categories = ["algorithms", "data-structures", "rust-patterns"]
# keywords =
# readme =
# documentation =
# homepage =
# repository =

[dependencies]
num = "0.4.0"
itertools = "0.10.3"
libm = "0.2.2"
ahash = "0.7.6"
rand = "0.8.5"
primal = "0.3.0"
ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs.git" }
euclid = "0.22.7"
tinyvec = "1.6.0"
delegate = "0.6.2"

[dev-dependencies]
proconio = "0.4.3"
approx = "0.5.1"
ndarray = "0.15.4"
rand = { version = "0.8.5", features = ["nightly", "small_rng", "min_const_gen"] }
derive_more = "0.99.17"
indoc = "1.0.4"
paste = "1.0.7"
