# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rithmic"
version = "1.0.0-pre"
edition = "2021"
rust-version = "1.66"
authors = ["Barry Fam <contact@barryfam.io>"]
license = "MIT"
description = "Odds & ends: Algorithms, data structures, ease-of-use"
categories = ["algorithms", "data-structures", "rust-patterns"]
# keywords =
# readme =
# documentation =
# homepage =
# repository =

[features]
unsafe = []

[dependencies]
rithmic-impl = { path = "../rithmic-impl" }

ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs.git" }
ahash = "0.8.0"
aquamarine = "0.1.12"
delegate = "0.8.0"
derive_more = "0.99.17"
euclid = "0.22.7"
itertools = "0.10.4"
libm = "0.2.5"
num = "0.4.0"
primal = "0.3.1"
proconio = "0.4.3"
rand = "0.8.5"
tinyvec = { version = "1.6.0", features = ["rustc_1_40"] }
rayon = "1.7.0"



[dev-dependencies]
approx = "0.5.1"
indoc = "1.0.7"
ndarray = "0.15.6"
paste = "1.0.9"
rand = { version = "0.8.5", features = ["nightly", "small_rng", "min_const_gen"] }
zip = "0.6.4"
